--- a/App/src/app/auth/forgot-password/forgot-password.page.html
+++ b/App/src/app/auth/forgot-password/forgot-password.page.html
@@ -1,45 +1,33 @@
 <ion-content [fullscreen]="true">
   <div class="card">
- 
-   
-        <ion-grid>
-          <ion-row class="ion-align-items-center ion-justify-content-center">
-            <ion-col class="logo">
-              <img src="../../../assets/bloodLogo.jpg" alt="LOGO" />
-            </ion-col>
-          </ion-row>
-          <ion-row
-            class="ion-align-items-center ion-justify-content-center ion-margin-bottom ion-margin-top"
-          >
-            <ion-label class="text">Forgot Password?</ion-label>
-          </ion-row>
-          <ion-row class="ion-align-items-center ion-justify-content-center">
-            <ion-col size="10">
-              <ion-item fill="outline" class="input">
-                <ion-label position="floating" label Placement="stacked"
-                  >Mobile Number</ion-label
-                >
-                <ion-input
-                  placeholder="Enter Mobile Number"
-                  [(ngModel)]="mobileNo"
-                ></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-          <ion-row class="ion-align-items-center ion-justify-content-center">
-            <ion-col size="10">
-              <ion-button
-                expand="block"
-                shape="round"
-                class="button ion-padding"
-                color="primary"
-                (click)="verifyNumber()"
-                >Verify Number</ion-button
-              >
-            </ion-col>
-          </ion-row>
-       
-        </ion-grid>
+
+
+    <ion-grid>
+      <ion-row class="ion-align-items-center ion-justify-content-center">
+        <ion-col class="logo">
+          <img src="../../../assets/bloodLogo.jpg" alt="LOGO" />
+        </ion-col>
+      </ion-row>
+      <ion-row class="ion-align-items-center ion-justify-content-center ion-margin-bottom ion-margin-top">
+        <ion-label class="text">Forgot Password?</ion-label>
+      </ion-row>
+      <ion-row class="ion-align-items-center ion-justify-content-center">
+        <ion-col size="10">
+          <ion-item class="input input-class">
+            <!-- <ion-label position="floating" label Placement="stacked">Mobile Number</ion-label> -->
+            <ion-input label="Mobile Number" label-placement="stacked" placeholder="Enter Mobile Number"
+              [(ngModel)]="mobileNo"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row class="ion-align-items-center ion-justify-content-center">
+        <ion-col size="10">
+          <ion-button expand="block" shape="round" class="button ion-padding" color="primary"
+            (click)="verifyNumber()">Verify Number</ion-button>
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>
 
   </div>
 </ion-content>
