--- a/App/src/app/auth/register/register.page.html
+++ b/App/src/app/auth/register/register.page.html
@@ -19,31 +19,31 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item  fill="outline" class="input">
-              <ion-label position="floating" lablePlacement="stacked">First Name</ion-label>
-              <ion-input autoComplete="off" placeholder="First Name" formControlName="firstName"></ion-input>
+            <ion-item   class="input input-class">
+              <!-- <ion-label position="floating" lablePlacement="stacked">First Name</ion-label> -->
+              <ion-input label="First Name" label-placement="stacked" autoComplete="off" placeholder="First Name" formControlName="firstName"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item  fill="outline" class="input">
-              <ion-label position="floating" lablePlacement="stacked">Last Name</ion-label>
-              <ion-input autoComplete="off" placeholder="Last Name" formControlName="lastName"></ion-input>
+            <ion-item   class="input input-class">
+              <!-- <ion-label position="floating" lablePlacement="stacked">Last Name</ion-label> -->
+              <ion-input label="Last Name" label-placement="stacked" autoComplete="off" placeholder="Last Name" formControlName="lastName"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item  fill="outline" class="input">
-              <ion-label position="floating" lablePlacement="stacked">Mobile Number</ion-label>
-              <ion-input autocomplete="off" placeholder="Mobile Number" formControlName="mobileNo"></ion-input>
+            <ion-item   class="input input-class">
+              <!-- <ion-label position="floating" lablePlacement="stacked">Mobile Number</ion-label> -->
+              <ion-input label="Mobile Number" label-placement="stacked" autocomplete="off" placeholder="Mobile Number" formControlName="mobileNo"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item fill="outline" class="input" >
+            <ion-item  class="input input-class" >
               <ion-label  *ngIf="!f['DOB'].value" position="floating" lablePlacement="stacked"
                 >Date of Birth</ion-label
               >
@@ -63,16 +63,16 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item  fill="outline" class="input">
-              <ion-label position="floating" lablePlacement="stacked">Pincode</ion-label>
-              <ion-input autoComplete="off" placeholder="Pincode" formControlName="pincode" type="number"></ion-input>
+            <ion-item   class="input input-class">
+              <!-- <ion-label position="floating" lablePlacement="stacked">Pincode</ion-label> -->
+              <ion-input label="Pincode" label-placement="stacked" autoComplete="off" placeholder="Pincode" formControlName="pincode" type="number"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
         <!-- blood Group -->
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item fill="outline">
+            <ion-item class="input-class">
               <ion-select
                 aria-label="Fruit"
                 interface="action-sheet"
@@ -90,7 +90,7 @@
         <!-- state -->
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item fill="outline">
+            <ion-item class="input-class">
               <ion-label position="floating" labelPlacement="stacked"
                 >{{'State'}}
               </ion-label>
@@ -114,7 +114,7 @@
         <!-- state ends -->
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item fill="outline">
+            <ion-item class="input-class">
               <ion-label position="floating" labelPlacement="stacked"
                 >District
               </ion-label>
@@ -136,7 +136,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item fill="outline">
+            <ion-item class="input-class">
               <ion-label position="floating" labelPlacement="stacked"
                 >Tehsil
               </ion-label>
@@ -159,7 +159,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item fill="outline">
+            <ion-item class="input-class">
               <ion-label position="floating" labelPlacement="stacked"
                 >Village
               </ion-label>
@@ -182,9 +182,9 @@
         
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="10">
-            <ion-item  fill="outline" class="input">
-              <ion-label position="floating">Password</ion-label>
-              <ion-input autocomplete="off" type="password" placeholder="Password" formControlName="password"></ion-input>
+            <ion-item class="input input-class">
+              <!-- <ion-label position="floating">Password</ion-label> -->
+              <ion-input label="Password" label-placement="stacked" autocomplete="off" type="password" placeholder="Password" formControlName="password"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
