--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -1,13 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-back-button
-      slot="start"
-      (click)="navigate()"
-      default-href=""
-    ></ion-back-button>
-    <ion-title class="ion-justify-content-center"
-      >{{'donate' | translate}}</ion-title
-    >
+    <ion-back-button slot="start" (click)="navigate()" default-href=""></ion-back-button>
+    <ion-title class="ion-justify-content-center">{{'donate' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -17,112 +11,73 @@
       <ion-grid>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" labelPlacement="stacked">
+            <ion-item class="input input-class">
+              <!-- <ion-label position="floating" labelPlacement="stacked">
                 {{'Name' | translate }}
-              </ion-label>
-              <ion-input
-                [readonly]="true"
-                placeholder="Full Name"
-                formControlName="name"
-              ></ion-input>
+              </ion-label> -->
+              <ion-input label="{{ 'Name' | translate }}" label-placement="stacked" [readonly]="true" type="text" placeholder="Full name"
+                  formControlName="name">
+                </ion-input>
+              <!-- <ion-input aria-label="{{ 'Name' | translate }}" [readonly]="true" placeholder="Full Name"
+                formControlName="name"></ion-input> -->
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" labelPlacement="stacked">
-                {{'age' | translate }}</ion-label
-              >
-              <ion-input
-                placeholder="Age"
-                label-placement="floating"
-                formControlName="age"
-                type="number"
-              ></ion-input>
+            <ion-item class="input input-class">
+              <!-- <ion-label position="floating" labelPlacement="stacked">
+                {{'age' | translate }}</ion-label>
+              <ion-input placeholder="Age" label-placement="floating" formControlName="age" type="number"></ion-input> -->
+              <ion-input label="{{'age' | translate }}" label-placement="floating" [readonly]="true" type="text" placeholder="Age"
+              formControlName="age">
+            </ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
-              <ion-select
-                aria-label="Fruit"
-                interface="action-sheet"
-                placeholder="{{'select gender' | translate}}"
-                formControlName="gender"
-                (ionChange)="checkGender()"
-              >
+            <ion-item class="input-class">
+              <ion-select aria-label="Fruit" interface="action-sheet" placeholder="{{'select gender' | translate}}"
+                formControlName="gender" (ionChange)="checkGender()">
                 <ion-select-option value="MALE">Male</ion-select-option>
                 <ion-select-option value="FEMALE">Female</ion-select-option>
               </ion-select>
             </ion-item>
           </ion-col>
         </ion-row>
-        <ion-row
-          *ngIf="isFemale"
-          class="ion-align-items-center ion-justify-content-center"
-        >
+        <ion-row *ngIf="isFemale" class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
-              <ion-label position="floating" lablePlacement="stacked"
-                >Father/Husband</ion-label
-              >
-              <ion-input
-                placeholder="Father/Husband"
-                formControlName="fatherOrHusband"
-              ></ion-input>
+            <ion-item class="input input-class" lines="none">
+              <ion-input label="Father/Husband" label-placement="floating" [readonly]="true" type="text" placeholder="Father/Husband"
+              formControlName="fatherOrHusband"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
-              <ion-label
-                *ngIf="!f['donationDate'].value"
-                position="floating"
-                labelPlacement="stacked"
-                >{{'donationDate' | translate }}</ion-label
-              >
+            <ion-item class="input-class">
+              <ion-label *ngIf="!f['donationDate'].value" position="floating" labelPlacement="stacked">{{'donationDate'
+                | translate }}</ion-label>
               <p class="ion-margin-end">{{f['donationDate'].value | date}}</p>
-              <ion-icon
-                slot="end"
-                color="primary"
-                name="calendar-outline"
-                datetime="datetime"
-                class="ion-margin-top"
-                (click)="openCalender('donationDate')"
-              ></ion-icon>
+              <ion-icon slot="end" color="primary" name="calendar-outline" datetime="datetime" class="ion-margin-top"
+                (click)="openCalender('donationDate')"></ion-icon>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" labelPlacement="stacked"
-                >{{'mobileNo' | translate }}</ion-label
-              >
-              <ion-input
-                [readonly]="true"
-                placeholder="mobileNo"
-                formControlName="mobileNo"
-                type="number"
-              ></ion-input>
+            <ion-item class="input input-class">
+              <!-- <ion-label position="floating" labelPlacement="stacked">{{'mobileNo' | translate }}</ion-label> -->
+              <ion-input label="{{'mobileNo' | translate }}" label-placement="floating" [readonly]="true" placeholder="mobileNo" formControlName="mobileNo" type="number"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
-              <ion-label position="floating" labelPlacement="stacked"
-                >{{'bloodgroup' | translate }}</ion-label
-              >
-              <ion-input
-                [readonly]="true"
-                placeholder="Blood Group"
-                formControlName="bloodGroup"
-              ></ion-input>
+            <ion-item class="input-class">
+              <!-- <ion-label position="floating" labelPlacement="stacked">{{'bloodgroup' | translate }}</ion-label> -->
+              <ion-input label="{{'bloodgroup' | translate }}" label-placement="floating" [readonly]="true" placeholder="Blood Group" formControlName="bloodGroup"></ion-input>
               <!-- <ion-select
               
                 aria-label="Fruit"
@@ -143,7 +98,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item class="input input-class">
               <!-- <ion-label position="floating" labelPlacement="stacked"
                 >{{'hemoglobin' | translate }}</ion-label
               >
@@ -151,17 +106,9 @@
                 placeholder="hemoglobin"
                 formControlName="hemoglobin"
               ></ion-input> -->
-              <ion-select
-                aria-label="Hemoglobin"
-                interface="action-sheet"
-                placeholder="Select Hemoglobin"
-                formControlName="hemoglobin"
-              >
-                <ion-select-option
-                  *ngFor="let item of hemoglobin"
-                  value="{{item}}"
-                  >{{item}}</ion-select-option
-                >
+              <ion-select aria-label="Hemoglobin" interface="action-sheet" placeholder="Select Hemoglobin"
+                formControlName="hemoglobin">
+                <ion-select-option *ngFor="let item of hemoglobin" value="{{item}}">{{item}}</ion-select-option>
               </ion-select>
             </ion-item>
           </ion-col>
@@ -169,64 +116,44 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" labelPlacement="stacked">
-                {{'state' | translate }}</ion-label
-              >
-              <ion-input
-                [readonly]="true"
-                placeholder="State"
-                label-placement="floating"
-                formControlName="state"
-              ></ion-input>
+            <ion-item class="input input-class">
+              <!-- <ion-label position="floating" labelPlacement="stacked">
+                {{'state' | translate }}</ion-label> -->
+              <ion-input label="{{'state' | translate }}" label-placement="floating" [readonly]="true" placeholder="State" label-placement="floating"
+                formControlName="state"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" labelPlacement="stacked">
-                {{'District' | translate }}</ion-label
-              >
-              <ion-input
-                [readonly]="true"
-                placeholder="District"
-                label-placement="floating"
-                formControlName="district"
-              ></ion-input>
+            <ion-item class="input input-class">
+              <!-- <ion-label position="floating" labelPlacement="stacked">
+                {{'District' | translate }}</ion-label> -->
+              <ion-input label="{{'District' | translate }}" label-placement="floating" [readonly]="true" placeholder="District" label-placement="floating"
+                formControlName="district"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" labelPlacement="stacked">
-                {{'Tahsil' | translate }}</ion-label
-              >
-              <ion-input
-                [readonly]="true"
-                placeholder="Tahsil"
-                label-placement="floating"
-                formControlName="tehsil"
-              ></ion-input>
+            <ion-item class="input input-class">
+              <!-- <ion-label position="floating" labelPlacement="stacked">
+                {{'Tahsil' | translate }}</ion-label> -->
+              <ion-input label="{{'Tahsil' | translate }}" label-placement="floating" [readonly]="true" placeholder="Tahsil" label-placement="floating"
+                formControlName="tehsil"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
-              <ion-label position="floating" labelPlacement="stacked">
-                {{'Village' | translate }}</ion-label
-              >
-              <ion-input
-                [readonly]="true"
-                placeholder="Village"
-                label-placement="floating"
-                formControlName="village"
-              ></ion-input>
+            <ion-item class="input input-class">
+              <!-- <ion-label position="floating" labelPlacement="stacked">
+                {{'Village' | translate }}</ion-label> -->
+              <ion-input label="{{'Village' | translate }}" label-placement="floating" [readonly]="true" placeholder="Village" label-placement="floating"
+                formControlName="village"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -481,39 +408,24 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-checkbox
-              formControlName="illness"
-              justify="start"
-              labelPlacement="end"
-              >Do you have any type of illness</ion-checkbox
-            >
+            <ion-checkbox formControlName="illness" labelPlacement="end" justify="start" label="Do you have any type of illness">
+              Do you have any type ofillness
+            </ion-checkbox>
           </ion-col>
           <ion-col size="1">
-            <ion-checkbox
-              [(ngModel)]="isTermsAgreed"
-              [ngModelOptions]="{standalone: true}"
-              justify="start"
-              labelPlacement="end"
-            >
+            <ion-checkbox [(ngModel)]="isTermsAgreed" [ngModelOptions]="{standalone: true}" justify="start"
+              labelPlacement="end" aria-label="Terms and Condition">
             </ion-checkbox>
           </ion-col>
           <ion-col size="11">
             I agree to the
-            <ion-text color="primary"
-              ><span (click)="handleModal(true)"
-                >Terms and Condition</span
-              ></ion-text
-            >
+            <ion-text color="primary"><span (click)="handleModal(true)">Terms and Condition</span></ion-text>
             of Donation
             <!-- <ion-icon name="information-circle-outline" class="info-terms" color="dark"></ion-icon> -->
           </ion-col>
         </ion-row>
 
-        <ion-modal
-          [isOpen]="setModal"
-          [backdropDismiss]="false"
-          id="example-modal"
-        >
+        <ion-modal [isOpen]="setModal" [backdropDismiss]="false" id="example-modal">
           <ng-template>
             <ion-grid class="ion-padding">
               <ion-list class="top-sec">
@@ -547,13 +459,8 @@
               </ion-list>
 
               <ion-list>
-                <ion-button
-                  expand="block"
-                  class="button"
-                  color="primary"
-                  (click)="acceptTermsAndCond()"
-                  >Accept & Continue</ion-button
-                >
+                <ion-button expand="block" class="button" color="primary" (click)="acceptTermsAndCond()">Accept &
+                  Continue</ion-button>
               </ion-list>
             </ion-grid>
             <!-- </ion-content> -->
@@ -596,19 +503,10 @@
           </ion-col>
         </ion-row> -->
 
-        <ion-row
-          class="ion-align-items-center ion-justify-content-center ion-margin-top"
-        >
+        <ion-row class="ion-align-items-center ion-justify-content-center ion-margin-top">
           <ion-col size="12">
-            <ion-button
-              expand="block"
-              shape="round"
-              class="button ion-padding"
-              color="primary"
-              [disabled]="!isTermsAgreed"
-              (click)="create()"
-              >{{'submit'| translate}}</ion-button
-            >
+            <ion-button expand="block" shape="round" class="button ion-padding" color="primary"
+              [disabled]="!isTermsAgreed" (click)="create()">{{'submit'| translate}}</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
