--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -69,7 +69,7 @@
                       </ion-row>
                       <ion-row class="ion-align-items-center ion-justify-content-center">
                         <ion-col size="12">
-                          <ion-item fill="outline" class="input-class">
+                          <ion-item class="input-class">
                             <ion-label *ngIf="!donationDate" position="floating" labelPlacement="stacked">{{'Donation Date'}}</ion-label>
                             <p class="ion-margin-end">{{donationDate | date}}</p>
                             <ion-icon slot="end" color="primary" name="calendar-outline" datetime="datetime" class="ion-margin-top"
